--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           </div> <!-- row para areglar logos-->
         </div> <!-- primer col-md para patrocinadores -->
         <div class="col-md-4 col-sm-4 col-4"> <!--segundo col para logo revista -->
-          <img src="./images/logo-marca-tv-mx.png" id="">
+          <img src="./images/logo-marca-tv-mx.png">
         </div> <!--segundo col para logo revista-->
         <div class="col-md-4 d-none d-md-block"> <!--tercer col para botones derechos-->
            <div class="row justify-content-around"> <!-- tercer row para botones derechos -->
@@ -307,22 +307,46 @@
           <p class="text-center">Otras webs de Unidad Editorial</p>
           <div class="dropdown-divider"></div>
           <div class="row">
-            <div class="col-md-3 justify-content-center">
-            <p class="text-center">Marca</p> 
-            <!--<ul>
-              <li class="text-center">App Marca</li>
-              <li class="text-center">Apuestas Deportivas</li>
-              <li class="text-center">Clasificación LaLiga</li>
-            </ul>-->
+            <div class="col-md-3 col-sm-6 col-12 justify-content-center">
+              <p class="text-center"><strong>Marca</strong></p> 
+            <p class="text-center">App Marca</p>
+            <p class="text-center">Apuestas Deportivas</p>
+            <p class="text-center">Clasificación LaLiga</p>
+            <p class="text-center">Calendario LaLiga</p>
+            <p class=text-center>Hermeroteca Marca</p>
+            <p class="text-center">Marca eSports</p>
+            <p class="text-center">Marca Madrid</p>
+            <p class="text-center">Marca en Orbyt</p>
+            <p class="text-center">Zona Marca</p>
+            <br>
             </div>
-            <div class="col-md-3 justify-content-center">
-            <p class="text-center">Ocio y Moda</p>
+            <div class="col-md-3 col-sm-6 col-12 justify-content-center">
+              <p class="text-center"><strong>Ocio y Moda</strong></p>
+            <p class="text-center">Tiramillas</p>
+            <p class="text-center">Moda - Telva</p>
+            <p class="text-center">BUHO Magazine</p>
+            <p class="text-center">Traductor</p>
+            <p class="text-center">Programación TV</p>
+            <p class="text-center">Marca Entradas</p>
+            <p class="text-center">Mi bebé y yo</p>
+            <br>
             </div>
-            <div class="col-md-3 justify-content-center">
-            <p class="text-center">Unidad Editorial</p>
+            <div class="col-md-3 col-sm-6 col-12 justify-content-center">
+              <p class="text-center"><strong>Unidad Editorial</strong></p>
+            <p class="text-center">El mundo</p>
+            <p class="text-center">Expansión</p>
+            <p class="text-center">Cuídate plus</p>
+            <p class="text-center">Diario Médico</p>
+            <p class="text-center">Correo Farmacéutico</p>
+            <p class="text-center">Suscripción Marca</p>
+            <p class="text-center">Suscripción El Mundo</p>
+            <br>
             </div>
-            <div class="col-md-3 justify-content-center">
-            <p class="text-center">Formacion y Empleo</p>
+            <div class="col-md-3 col-sm-6 col-12 justify-content-center">
+              <p class="text-center"><strong>Formacion y Empleo</strong></p>
+              <p class="text-center">Escuela Unidad Editorial</p>
+              <p class="text-center">Unidad Editorial</p>
+              <p class="text-center">Expansión y empleo</p>
             </div>
           </div>
         </div>
