--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
   </div>
 </nav>
     <!-- navbar -->
+
     <!-- banner--> 
     <div class="container mt-5">
       <div class="row justify-content-center">
@@ -301,10 +302,10 @@
     <!-- tercer fila de noticias -->
 
     <!-- Footer -->
-    <div class="container-fluid bg-dark text-white">
+    <div class="container-fluid bg-dark text-white pt-3">
       <div class="row">
         <div class="col-md-12 col-sm-12 col-12">
-          <p class="text-center">Otras webs de Unidad Editorial</p>
+          <p class="text-center"><strong>Otras webs de Unidad Editorial</strong></p>
           <div class="dropdown-divider"></div>
           <div class="row">
             <div class="col-md-3 col-sm-6 col-12 justify-content-center">
